# warcaby

./: .gitignore  CMakeLists.txt
Google_tests/: CMakeLists.txt
Google_tests/core/: engine_tests.cpp
Google_tests/entities/: board_tests.cpp
Google_tests/helpers/: calculate_tests.cpp  formatter_tests.cpp  load_res_tests.cpp
warcaby/: CMakeLists.txt  main.cpp
warcaby/core/: engine.cpp  engine.h  timer.cpp  timer.h
warcaby/entities/: board.cpp  board.h  pawn.cpp  pawn.h  player.cpp  player.h
warcaby/helpers/: calculate.cpp  calculate.h  draw_helper.cpp  draw_helper.h  formatter.cpp  formatter.h  load_res.cpp  load_res.h
